fix: improve colour contrasts (#216)
* Reduce to size of the selector option_selected .css class from to make the contrast between the option selected and the backround more clear.

* Remove box shadow to replace the dark green border with a white border to increase the color contrast to the background.

* Adding italic font style and bold weight to highligt the item being hovered over.

* Add updates to widget.

* Remove font-style: italic.

* Update the outer border-radius of the selector.

* Reduce to size of the selector option_selected .css class in the widget from to make the contrast between the option selected and the backround more clear.

* Remove partial bold text from autosuggestions for locations to search for. Retains the function to highlight in case it is later desired.

* Remove code that should not have been commited to this branch.

* Add box-shadow to button in both web and widget.

* Remove highlightSearchText() from Search.tsx

--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -122,8 +122,7 @@
 }
 .button--interactive_0--bordered:focus {
   outline: 0;
-  box-shadow: inset 0 0 0 var(--border-width-medium)
-    var(--interactive-interactive_0-outline-background);
+  box-shadow: inset 0 0 0 var(--border-width-medium);
 }
 
 /* Interactive button 1 */
