--- a/src/components/search/search.module.css
+++ b/src/components/search/search.module.css
@@ -73,6 +73,7 @@
 
 .itemHighlighted {
   background-color: var(--interactive-interactive_2-active-background);
+  font-weight: bold;
 }
 
 .itemIcon {
