--- a/src/modules/search-time/selector/selector.module.css
+++ b/src/modules/search-time/selector/selector.module.css
@@ -63,12 +63,12 @@
 
 .option__selected {
   background: var(--interactive-interactive_0-default-background);
-  width: 100%;
-  height: 100%;
+  width: 95%;
+  height: 95%;
   position: absolute;
   border-radius: var(--border-radius-regular);
-  top: 0;
-  left: 0;
+  top: 2.5%;
+  left: 2.5%;
 }
 
 .dateAndTimeSelectorsWrapper {
@@ -86,7 +86,7 @@
 .dateSelector,
 .timeSelector {
   --height: 2.75rem;
-  border-radius: 0.75rem;
+  border-radius: var(--border-radius-regular);
   overflow: hidden;
   background-color: var(--static-background-background_0-background);
   display: flex;
