--- a/src/widget/widget.module.css
+++ b/src/widget/widget.module.css
@@ -139,15 +139,17 @@
 .selector_option {
   composes: option from selector;
 }
-.selector_option {
-  composes: option from selector;
-}
 
 .selector_option__text {
   composes: option__text from selector;
 }
 .selector_option__label {
   composes: option__label from selector;
+  position: relative;
+  height: 95%;
+  width: 95%;
+  top: 2.5%;
+  left: 2.5%;
 }
 .selector_option__input {
   composes: option__input from selector;
@@ -232,8 +234,7 @@
 }
 .button:focus {
   outline: 0;
-  box-shadow: inset 0 0 0 var(--border-width-medium)
-    var(--interactive-interactive_0-outline-background);
+  box-shadow: inset 0 0 0 var(--border-width-medium);
 }
 
 /* Autocomplete */
@@ -250,6 +251,7 @@
 .listItem[aria-selected='true'],
 .listItem:hover {
   background-color: var(--interactive-interactive_2-active-background);
+  font-weight: bold;
 }
 
 .itemIcon {
